--- a/php-fpm-gost/Dockerfile
+++ b/php-fpm-gost/Dockerfile
@@ -123,9 +123,9 @@ RUN set -eux; \
 	gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; \
 	debMultiarch="$(dpkg-architecture --query DEB_BUILD_MULTIARCH)"; \
 # https://bugs.php.net/bug.php?id=74125
-	if [ ! -d /usr/include/curl ]; then \
-		ln -sT "/usr/include/$debMultiarch/curl" /usr/local/include/curl; \
-	fi; \
+#	if [ ! -d /usr/include/curl ]; then \
+#		ln -sT "/usr/include/$debMultiarch/curl" /usr/local/include/curl; \
+#	fi; \
 	./configure \
 		--build="$gnuArch" \
 		--with-config-file-path="$PHP_INI_DIR" \
